developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/OJSERLIB__Credit_Check__c.object-meta.xml
<CustomObject>
    <description>Credit check object</description>
    <label>Credit Check</label>
    <nameField>
        <label>Credit Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>