developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__Account_ID__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Account_ID__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Checks</relationshipLabel>
    <relationshipName>Credit_Checks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>