developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Account_Name__c</fullName>
    <label>Account Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>