developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__Amount__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>