developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__Application_Ref_Id__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Application_Ref_Id__c</fullName>
    <label>Application Ref Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>