developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__Message__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>