developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__OpportunityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Credit Checks</relationshipLabel>
    <relationshipName>Credit_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>