developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__Probability_Adverse__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Probability_Adverse__c</fullName>
    <label>Probability Adverse</label>
    <length>25</length>
    <type>Text</type>
</CustomField>