developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__Score__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Score__c</fullName>
    <label>Score</label>
    <length>5</length>
    <type>Text</type>
</CustomField>