developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__Service_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Service_Provider_Name__c</fullName>
    <label>Service Provider Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>