developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__VEDA_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Account_Type__c</fullName>
    <label>VEDA Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DAYACCOUNT30</fullName>
                <default>true</default>
                <label>DAYACCOUNT30</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>