developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__VEDA_Account_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Account_Type_Code__c</fullName>
    <label>VEDA Account Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OJSERLIB__VEDA_Account_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <default>true</default>
                <label>30</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>