developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__VEDA_Commercial_And_Consumer__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Commercial_And_Consumer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VEDA Commercial And Consumer</label>
    <type>Checkbox</type>
</CustomField>