developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__VEDA_Enquiry_ID__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Enquiry_ID__c</fullName>
    <label>VEDA Enquiry ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>