developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__VEDA_Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Enquiry_Type__c</fullName>
    <label>VEDA Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>credit-review</fullName>
                <default>true</default>
                <label>credit-review</label>
            </value>
            <value>
                <fullName>credit-enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>