developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__VEDA_Respone_Not_Received__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Respone_Not_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VEDA Respone Not Received</label>
    <type>Checkbox</type>
</CustomField>