developerProject/force-app/main/default/objects/OJSERLIB__Credit_Check__c/fields/OJSERLIB__VEDA_Role__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Role__c</fullName>
    <label>VEDA Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
                <default>true</default>
                <label>Principal</label>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
            <value>
                <fullName>Coborrower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>